# kafka-rust-learn

./: Cargo.toml  README.md  docker-compose.yml
src/: consumer.rs  producer.rs
